Utils & RAG Agent Live

--- a/src/agents/enhancer_agent.ipynb
+++ b/src/agents/enhancer_agent.ipynb
@@ -2,50 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "ab024f8d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BASE_DIR: /home/prashant-agrawal/Netflix_Project/src\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "import sys\n",
-    "\n",
-    "# Go up one level to reach src/\n",
-    "BASE_DIR = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
-    "if BASE_DIR not in sys.path:\n",
-    "    sys.path.insert(0, BASE_DIR)\n",
-    "\n",
-    "print(f\"BASE_DIR: {BASE_DIR}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "245823ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain_core.tools import Tool\n",
-    "\n",
-    "# 🔁 Import all tools from registry\n",
-    "from tools.enhancer_tools_registry import (\n",
-    "    keyword_extractor_tool,\n",
-    "    extract_numeric_constraints_tool,\n",
-    "    filter_composer_tool\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "ba47942e",
    "metadata": {},
    "outputs": [
@@ -130,8 +87,32 @@
     "- Do not include explanations or formatting like “Here’s the improved query.”\n",
     "\n",
     "Example:\n",
+    "1. Fuzzy Funding Reference → Structured Numeric + Stage Filter\n",
     "User Query: \"Startups with big funding\"\n",
-    "Enhanced: \"Indian startups that raised over $10 million in Series A or later\"\n",
+    "Enhanced Prompt: \"Indian startups that raised over $10 million in Series A or later funding rounds.\"\n",
+    "Focus: Adds monetary threshold and filters funding stage.\n",
+    "\n",
+    "2. Location Mention → Structured Geographic Filter\n",
+    "User Query: \"Top SaaS companies in Bangalore\"\n",
+    "Enhanced Prompt: \"Top-performing SaaS startups headquartered in Bengaluru with recent traction or funding activity.\"\n",
+    "Focus: Resolves city + domain, adds optional temporal or traction filter.\n",
+    "\n",
+    "🔹 3. Team Size Mention → Employee Count Filter\n",
+    "User Query: \"Companies with large teams working in AI\"\n",
+    "Enhanced Prompt: \"AI-focused startups in India with over 200 employees and active hiring status.\"\n",
+    "Focus: Converts “large team” into a numeric filter + hiring signal.\n",
+    "\n",
+    "🔹 4. Recent Growth Mention → Year + Funding Filter\n",
+    "User Query: \"Fast-growing e-commerce startups\"\n",
+    "Enhanced Prompt: \"E-commerce startups founded after 2018 with rapid growth and multiple funding rounds.\"\n",
+    "Focus: Infers growth using founding year and number of rounds.\n",
+    "\n",
+    "🔹 5. Tech Stack Mention → Tool + Sector Filters\n",
+    "User Query: \"Fintech companies using AWS and React\"\n",
+    "Enhanced Prompt: \"Fintech startups with a tech stack including AWS and React, offering scalable B2C solutions.\"\n",
+    "Focus: Extracts cloud/backend/frontend tech + sector.\n",
+    "\n",
+    "\n",
     "\n",
     "You have access to the following tools:\n",
     "{tools}\n",
@@ -177,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "adc1c928",
    "metadata": {},
    "outputs": [],
@@ -223,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "96e729ef",
    "metadata": {},
    "outputs": [
@@ -234,44 +215,40 @@
       "\n",
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3m```\n",
-      "Question: \n",
-      "List D2C or SaaS companies in Delhi or Hyderabad that raised over ₹200 crore, are currently hiring for engineers and PMs, valued above $500 million, \n",
-      "offer mobile apps or APIs, and are backed by Sequoia or Accel.\n",
-      "\n",
-      "Thought: The query is about companies with several specific criteria, including company type, location, funding, hiring status, valuation, product offerings, and investors. I'll extract keywords first to identify company metadata fields.\n",
+      "\u001b[32;1m\u001b[1;3mThought: I need to extract keywords related to company details such as location, tech stack, funding, valuation, hiring status, product offering, and investor support from the query. Additionally, I need to extract numeric constraints related to funding, valuation, and possibly hiring details.\n",
       "\n",
       "Action: keyword_extractor\n",
-      "Action Input: List D2C or SaaS companies in Delhi or Hyderabad that raised over ₹200 crore, are currently hiring for engineers and PMs, valued above $500 million, offer mobile apps or APIs, and are backed by Sequoia or Accel.\n",
-      "\u001b[0m\u001b[36;1m\u001b[1;3m{'headquarters_city': ['delhi', 'hyderabad'], 'industry_sector': ['saas', 'd2c'], 'total_funding_raised_inr': ['₹', 'crore', 'cr', 'million', 'raised', 'over ₹'], 'hiring_status': ['hiring', 'currently hiring'], 'popular_roles_open': ['engineers'], 'primary_products__services': ['mobile app'], 'investors': ['accel', 'sequoia']}\u001b[0m\u001b[32;1m\u001b[1;3mI have identified that the query contains specific metadata fields regarding the location, industry sector, funding, hiring status, product offerings, and investors. Next, I will extract numeric constraints for funding and valuation.\n",
-      "\n",
-      "Action: Numeric Constraint Extraction\n",
-      "Action Input: List D2C or SaaS companies in Delhi or Hyderabad that raised over ₹200 crore, are currently hiring for engineers and PMs, valued above $500 million, offer mobile apps or APIs, and are backed by Sequoia or Accel.\n",
+      "Action Input: \"List D2C or SaaS companies in Delhi or Hyderabad that raised over ₹200 crore, are currently hiring for engineers and PMs, valued above $500 million, offer mobile apps or APIs, and are backed by Sequoia or Accel.\"\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m{'headquarters_city': ['delhi', 'hyderabad'], 'industry_sector': ['saas', 'd2c'], 'total_funding_raised_inr': ['raised', 'million', 'crore', '₹', 'cr', 'over ₹'], 'hiring_status': ['hiring', 'currently hiring'], 'popular_roles_open': ['engineers'], 'primary_products__services': ['mobile app'], 'investors': ['accel', 'sequoia']}\u001b[0m\u001b[32;1m\u001b[1;3mAction: Numeric Constraint Extraction\n",
+      "Action Input: \"List D2C or SaaS companies in Delhi or Hyderabad that raised over ₹200 crore, are currently hiring for engineers and PMs, valued above $500 million, offer mobile apps or APIs, and are backed by Sequoia or Accel.\"\n",
       "\u001b[0m⚠️ No matching field found nearby. Falling back to 'total_funding_raised_inr'.\n",
-      "\u001b[33;1m\u001b[1;3m{'total_funding_raised_inr': {'gte': 500.0}}\u001b[0m\u001b[32;1m\u001b[1;3mThe numeric extraction only partially captured the query's constraints. It detected a constraint related to funding but didn't capture the valuation constraint or convert currency from INR to USD. I will re-evaluate and ensure additional numeric constraints are correctly identified and integrated.\n",
-      "\n",
-      "Action: Numeric Constraint Extraction\n",
-      "Action Input: valued above $500 million\n",
+      "\u001b[33;1m\u001b[1;3m{'total_funding_raised_inr': {'gte': 500.0}}\u001b[0m\u001b[32;1m\u001b[1;3mAction: Numeric Constraint Extraction\n",
+      "Action Input: \"List D2C or SaaS companies in Delhi or Hyderabad that raised over ₹200 crore, are currently hiring for engineers and PMs, valued above $500 million, offer mobile apps or APIs, and are backed by Sequoia or Accel.\"\n",
       "\u001b[0m⚠️ No matching field found nearby. Falling back to 'total_funding_raised_inr'.\n",
-      "\u001b[33;1m\u001b[1;3m{'total_funding_raised_inr': {'gte': 500.0}}\u001b[0m\u001b[32;1m\u001b[1;3mIt seems that the Numeric Constraint Extraction did not effectively capture the valuation constraint. The observation for the valuation constraint should ideally reflect values in USD. Nonetheless, I'll ensure this constraint—valued above $500 million—is noted in the final composition of filters. I'll now proceed to compose the filters based on the identified information.\n",
+      "\u001b[33;1m\u001b[1;3m{'total_funding_raised_inr': {'gte': 500.0}}\u001b[0m\u001b[32;1m\u001b[1;3mI have gathered all necessary structured data.\n",
       "\n",
-      "Action: filter_composer\n",
-      "Action Input: {\n",
-      "   \"headquarters_city\": [\"delhi\", \"hyderabad\"],\n",
-      "   \"industry_sector\": [\"saas\", \"d2c\"],\n",
-      "   \"total_funding_raised_inr\": {\"gte\": 500.0},\n",
-      "   \"hiring_status\": [\"hiring\", \"currently hiring\"],\n",
-      "   \"popular_roles_open\": [\"engineers\", \"pms\"],\n",
-      "   \"primary_products__services\": [\"mobile app\", \"apis\"],\n",
-      "   \"investors\": [\"accel\", \"sequoia\"],\n",
-      "   \"valuation_usd\": {\"gt\": 500}\n",
-      "}\n",
-      "\u001b[0m\u001b[38;5;200m\u001b[1;3m{'headquarters_city': ['delhi', 'hyderabad'], 'industry_sector': ['saas', 'd2c'], 'total_funding_raised_inr': {'gte': 500.0}, 'hiring_status': ['hiring', 'currently hiring'], 'popular_roles_open': ['engineers', 'pms'], 'primary_products__services': ['mobile app', 'apis'], 'investors': ['accel', 'sequoia'], 'valuation_usd': {'gt': 500}}\u001b[0m\u001b[32;1m\u001b[1;3mI now know the structured metadata\n",
-      "\n",
-      "Final Answer: {'headquarters_city': ['delhi', 'hyderabad'], 'industry_sector': ['saas', 'd2c'], 'total_funding_raised_inr': {'gte': 500.0}, 'hiring_status': ['hiring', 'currently hiring'], 'popular_roles_open': ['engineers', 'pms'], 'primary_products__services': ['mobile app', 'apis'], 'investors': ['accel', 'sequoia'], 'valuation_usd': {'gt': 500}}\u001b[0m\n",
+      "Final Answer: {\n",
+      "    \"headquarters_city\": [\"Delhi\", \"Hyderabad\"],\n",
+      "    \"industry_sector\": [\"SaaS\", \"D2C\"],\n",
+      "    \"total_funding_raised_inr\": {\"gte\": 200},\n",
+      "    \"hiring_status\": [\"currently hiring\"],\n",
+      "    \"popular_roles_open\": [\"engineers\", \"PMs\"],\n",
+      "    \"valuation_usd\": {\"gte\": 500},\n",
+      "    \"primary_products_services\": [\"mobile app\", \"API\"],\n",
+      "    \"investors\": [\"Sequoia\", \"Accel\"]\n",
+      "}\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "{'headquarters_city': ['delhi', 'hyderabad'], 'industry_sector': ['saas', 'd2c'], 'total_funding_raised_inr': {'gte': 500.0}, 'hiring_status': ['hiring', 'currently hiring'], 'popular_roles_open': ['engineers', 'pms'], 'primary_products__services': ['mobile app', 'apis'], 'investors': ['accel', 'sequoia'], 'valuation_usd': {'gt': 500}}\n"
+      "{\n",
+      "    \"headquarters_city\": [\"Delhi\", \"Hyderabad\"],\n",
+      "    \"industry_sector\": [\"SaaS\", \"D2C\"],\n",
+      "    \"total_funding_raised_inr\": {\"gte\": 200},\n",
+      "    \"hiring_status\": [\"currently hiring\"],\n",
+      "    \"popular_roles_open\": [\"engineers\", \"PMs\"],\n",
+      "    \"valuation_usd\": {\"gte\": 500},\n",
+      "    \"primary_products_services\": [\"mobile app\", \"API\"],\n",
+      "    \"investors\": [\"Sequoia\", \"Accel\"]\n",
+      "}\n"
      ]
     }
    ],
