--- a/src/tools/enhancer_tools_registry.ipynb
+++ b/src/tools/enhancer_tools_registry.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "ec1146be",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,12 @@
     "from enhancer_agent_tools.classify_category import classify_categories\n",
     "from enhancer_agent_tools.entity_extractor import extract_entities\n",
     "from enhancer_agent_tools.filter_composer import compose_filters\n",
-    "from enhancer_agent_tools.rag_search_tool import rag_search_tool,RagSearchInput"
+    "from enhancer_agent_tools.rag_search_tool import rag_search_fn, RagSearchInput"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "87f1683d",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "3373ccec",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "bc84bd85",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "1337c07f",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "f99baa73",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "362b2606",
    "metadata": {},
    "outputs": [],
@@ -135,9 +135,9 @@
     "from langchain_core.tools import Tool\n",
     "from enhancer_agent_tools.rag_search_tool import RagSearchInput  # Import RagSearchInput\n",
     "\n",
-    "rag_vector_tool = Tool(\n",
+    "rag_search_tool = Tool(\n",
     "    name=\"rag_search_tool\",\n",
-    "    func=rag_search_tool,\n",
+    "    func=rag_search_fn,\n",
     "    description=\"Semantic search tool over startup documents using FAISS. Supports filters like sector, funding, location.\",\n",
     "    args_schema=RagSearchInput,\n",
     ")"
